--- a/index.html
+++ b/index.html
@@ -142,6 +142,6 @@
       </div>
     </div>
 
-    <footer class="site-footer">&copy; 2024 Fake Adoption Center. All rights not reserved.</footer>
+    <footer class="site-footer">&copy; 2024 Fake Adoption Center. All rights reserved.</footer>
   </body>
 </html>
