--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </defs>
               </svg>
               <h2>Sunny Play</h2>
-              <p>Our center is located in beautiful Miami, and it&rsquo;s currently <span></span>°F at our pet playground.</p>
+              <p>Our center is located in beautiful Miami, and it&rsquo;s currently <span id="temperature-output"></span>°F at our pet playground.</p>
             </div>
             <div class="intro-feature">
               <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -143,5 +143,6 @@
     </div>
 
     <footer class="site-footer">&copy; 2024 Fake Adoption Center. All rights not reserved.</footer>
+    <script src="main.js"></script>
   </body>
 </html>
