Nearly finished Pet card feature

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <p class="pet-age"></p>
               </div>
               <div class="pet-card-photo">
-                <img src="images/barksalot.jpg" alt="A white fluffy dog named Barksalot" />
+                <img src="" alt="A white fluffy dog named Barksalot" />
               </div>
             </div>
           </template>
